chore(widgets): correct ptl class and add spacing to lup widget items

--- a/src/scss/modules/_widgets.scss
+++ b/src/scss/modules/_widgets.scss
@@ -143,11 +143,15 @@
 		}
 	}
 
-	.ptl_widget,
-	.lup {
+	.lup,
+	.ptl {
 		&__item {
 			display: flex;
 			flex-flow: row nowrap;
 		}
+	}
+
+	.lup__item {
+		margin-bottom: cssVar(spacing-md);
 	}
 }
